testsuite/tests/typecheck/should_fail/T14904a.stderr

T14904a.hs:8:1: error:
    You have written a *complete user-suppled kind signature*,
    but the following variable is undetermined: k0 :: *
    Perhaps add a kind signature.
    Inferred kinds of user-written variables:
      g :: k0 -> *
      f :: forall (a :: k0). g a

T14904a.hs:9:6: error:
    • Expected kind ‘forall (a :: k1). g a’, but ‘f’ has kind ‘k0’
    • In the first argument of ‘F’, namely ‘(f :: forall a. g a)’
      In the type family declaration for ‘F’
